# QJudge

./: .env.example  .gitignore  .naminglintignore  AGENT_GUIDE.md  BACKEND_API.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CONTEST_MVP_QUICKSTART.md  CONTRIBUTING.md  DATABASE_DESIGN.md  DEPLOYMENT.md  E2E_TESTING.md  FRONTEND_USECASE.md  I18N-FOLLOWUP-PLAN.md  I18N-REVIEW-README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATIONS.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  REQUIREMENTS.md  SECURITY.md  SSE_IMPLEMENTATION_NOTES.md  SUBMISSION_API_IMPROVEMENTS.md  SUBMISSION_API_性能問題分析.md  Test_Agent.md  UI_DESIGN.md  VERIFICATION_CHECKLIST.md  all_exports.txt  capture_more_screenshots.py  capture_screenshot.py  clean_docs.py  clean_md_headers.py  design_audit_action.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  (+13 more)
ai-service/: .dockerignore  Dockerfile  config.py  exec_sudoku.py  execute_sudoku.py  final_execution.py  generate_sudoku.py  main.py  pyproject.toml  requirements.txt  run_generator.py  run_sudoku_generator.py  sudoku_generator.py  test_client.py  test_deepseek.py  test_sudoku_simple.py
ai-service/.deepagents/: AGENTS.md
ai-service/agent/: CLAUDE.md
ai-service/models/: __init__.py  schemas.py
ai-service/routers/: __init__.py  chat.py
ai-service/scripts/: validate_problem_json.py
ai-service/services/: __init__.py  artifact_tools.py  ask_user_tool.py  claude_service.py  deepagent_runner.py  event_adapter.py  hitl_middleware.py  mcp_tool_provider.py  model_factory.py  next_turn_tool.py  tool_client.py  tool_registry.py  tpm_gate.py
ai-service/tests/: test_api.py  test_artifact_tools.py  test_auth_chain.py  test_checkpoint_recovery_manager.py  test_config.py  test_deepagent_runner.py  test_deepagent_runner_config.py  test_deepagent_runner_recursion.py  test_deepagent_runner_streaming.py  test_event_adapter.py  test_hitl_middleware.py  test_tpm_gate.py  (+5 more)
(+4130 files in other folders)
