[project]
name = "qjudge-paper-cli"
version = "0.1.0"
description = "OAuth-first CLI frontend for QJudge paper exam workflows"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
interactive = [
    "questionary>=2.0.0",
]

[project.scripts]
qjudge-paper = "qjudge_paper_cli.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
